<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SegundoActivity">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#4CAF50"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonNavegadorWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicNavegadorWeb"
        android:text="@string/button_text_navegador_web" />

    <Button
        android:id="@+id/buttonLlamar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicLlamar"
        android:text="@string/button_text_llamada" />

    <Button
        android:id="@+id/buttonMostrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClicMostrar"
        android:text="@string/button_text_mostrar" />
</LinearLayout>